--- a/.github/workflows/run-tests.js.yml
+++ b/.github/workflows/run-tests.js.yml
@@ -26,4 +26,4 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm run build --if-present
-    - run: npm test:e2e
+    - run: npm run test:e2e
