--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         docker login -u $DOCKER_USERNAME -p $DOCKER_TOKEN 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag chshahid/cicd-test-case:$(date +%s)
+      run: docker build . --file Dockerfile --tag chshahid/cicd-test:$(date +%s)
       
     - name: Docker Push
-      run: docker push chshahid/cicd-test-case
+      run: docker push chshahid/cicd-test
