--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
-      
+
     - name: Docker Login
       env:
         DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
@@ -24,8 +24,8 @@ jobs:
         docker login -u $DOCKER_USERNAME -p $DOCKER_TOKEN 
 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag chshahid/cicd-test:$(date +%s)
+      run: docker build . --file Dockerfile --tag chshahid/cicd-test:latest
       
     - name: Docker Push
-      run: docker push chshahid/cicd-test
+      run: docker push chshahid/cicd-test:latest
       if: success()  # Run this step only if the build is successful
